whoami.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: whoami
  annotations:
    # kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: whoami.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami
          servicePort: 80
